--- a/Common/Extract Particular Text and Highlight/Extract_Text_and_Highlight/Extract_Text_and_Highlight.csproj
+++ b/Common/Extract Particular Text and Highlight/Extract_Text_and_Highlight/Extract_Text_and_Highlight.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="27.1.57" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="27.1.57" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
