--- a/Common/Load PDF, Excel, PPT file types/WASM Side Sample/Load PDF, Excel, PPT file types/WebService/WebService.csproj
+++ b/Common/Load PDF, Excel, PPT file types/WASM Side Sample/Load PDF, Excel, PPT file types/WebService/WebService.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="*" />
     <PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="*" />
-    <PackageReference Include="Syncfusion.EJ2.PdfViewer.AspNet.Core.Windows" Version="*" />
+    <PackageReference Include="Syncfusion.EJ2.PdfViewer.AspNet.Core" Version="*" />
     <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="*" />
     <PackageReference Include="Syncfusion.Presentation.Net.Core" Version="*" />
     <PackageReference Include="Syncfusion.PresentationRenderer.Net.Core" Version="*" />
