--- a/Common/RemoveZoomOption/RemoveZoomOption/RemoveZoomOption.csproj
+++ b/Common/RemoveZoomOption/RemoveZoomOption/RemoveZoomOption.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="24.2.4" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="24.2.4" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
