--- a/Common/Add Signature as Custom Stamp/AddSignatureAsCustomStamp.csproj
+++ b/Common/Add Signature as Custom Stamp/AddSignatureAsCustomStamp.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="28.1.33" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="28.1.33" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
