--- a/Common/Auto Text Search on PDF Load/Auto_Text_Search_on_PDF_Load/Auto_Text_Search_on_PDF_Load.csproj
+++ b/Common/Auto Text Search on PDF Load/Auto_Text_Search_on_PDF_Load/Auto_Text_Search_on_PDF_Load.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="27.2.5" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="27.2.5" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
